# llm-council

./: .coverage  .env.example  .gitignore  BRIEF_API_CLIENT.md  BRIEF_COG_V2.md  BRIEF_DAG_NODES_V2.md  BRIEF_DESIGN_COUNCIL.md  BRIEF_DESIGN_RETRO80.md  BRIEF_MODE_CAFEINE.md  BRIEF_PIPELINE_V2.md  BRIEF_V2_CLOSE.md  BRIEF_V2_FINAL.md  CLAUDE.md  Dockerfile  LICENSE  QUICKWINS.md  README.md  README_EN.md  deploy.bat  deploy.sh  docker-compose.yml  docker-start.sh  install_spacy.bat  launch.bat  pyproject.toml  start.bat
.claude/: settings.local.json
backend/: PipelineEditor.css  PipelineEditor.jsx  __init__.py  agent_manager.py  anonymizer.py  cog_parser.py  config.py  cost_estimator.py  council.py  dag_engine.py  db.py  deliberate_router.py  document_extractor.py  errors.py  fallback_models.py  fs_browser.py  image_gen.py  logging_config.py  main.py  mcp_server.py  model_advisor.py  ollama_client.py  openrouter.py  permissions.py  rag_audit.py  rag_folders.py  rag_store.py  scorer.py  storage.py  tool_executor.py  usage_logger.py  user_archiver.py
backend/cog_examples/: exemple_multiagent.cog.json  exemple_rag_analyse.cog.json  exemple_web_factcheck.cog.json
backend/tests/: __init__.py  conftest.py  test_auth.py  test_dag.py  test_rag.py  test_users.py
doc_perso/: LLM_Council_CDC.docx  Nouveau Document texte (3).txt  council K.txt
docs/briefs/: BRIEF_AUDIT_LLM_COUNCIL.md  BRIEF_PREREQUIS_V2.md  BRIEF_RAG_PC_EXPLORER.md  BRIEF_RAG_SESSION4_ARBORIST.md  (+4 more)
frontend/: index.html  nginx.conf  package-lock.json  package.json
outputs/: AUDIT_V1_REPORT.md
(+78 files in other folders)
