[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pypdf>=6.7.5",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "mammoth>=1.11.0",
    "olefile>=0.47",
    "spacy>=3.8.11",
    "fr-core-news-sm",
    "pdfplumber>=0.11.9",
    "bcrypt>=5.0.0",
    "python-jose[cryptography]>=3.5.0",
    "tinydb>=4.8.2",
    "tqdm>=4.67.3",
    "pyyaml>=6.0.3",
    "overrides>=7.7.0",
    "importlib-resources>=6.5.2",
    "lancedb>=0.30.0",
    "slowapi>=0.1.9",
    "structlog>=24.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "odfpy>=1.4.1",
    "apscheduler>=3.10.0",
    "mcp>=1.0.0",
]

[tool.uv.sources]
fr-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl" }
